# deriva-load-testing

./: .env-sample  .gitignore  README.md  pyproject.toml
.github/scripts/: download-prev-test-image-table-artifact.js  test-image-table-summary.js
.github/workflows/: test-image-table.yml
artillery/: README.md  deriva-load-test.yml  package-lock.json  package.json  scripts.js
deriva_load_testing/: __init__.py  cli.py  patterns.py  plot.py  report.py  runner.py  urls.py
playwright/: .env-sample  README.md  case-1-experiment.sh  case1.config.ts  case2.config.ts  case_1_experiment.sh  case_2_experiment.sh  makefile  modify-hatrac.sh  package-lock.json  package.json  playwright.config.ts  run-experiment.sh  run-signed.sh  run-unsigned.sh  run.sh  test-image-table.sh
playwright/src/github-scripts/: test-image-table-summary.js
playwright/src/scripts/: image.spec.ts  recordset.spec.ts
playwright/src/test-scripts/: case1.spec.ts  case2.spec.ts  image.spec.ts  recordset.spec.ts
playwright/src/utils/: check-cache.teardown.ts  helpers.js  helpers.ts  image-reporter-signed.ts  image-reporter.ts  image.setup.ts  image.teardown.ts  playwright.setup.ts  playwright.teardown.ts  reporter.ts  test-page-load.js
urls/: sample-background.json  sample-main.json
