[project]
name = "deriva-load-testing"
version = "0.1.0"
description = "Generic load testing tool for chaise page performance."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "pandas>=2.2",
    "plotly>=5.22",
    "kaleido>=0.2",
]

[project.scripts]
deriva-load-test = "deriva_load_testing.cli:main_runner"
deriva-load-plot = "deriva_load_testing.cli:main_plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deriva_load_testing"]
